fix scrollbar appearing in modal

--- a/libraries/layer-lib/src/components/modal.css
+++ b/libraries/layer-lib/src/components/modal.css
@@ -2,6 +2,7 @@
   height: 100%;
   padding: 0 !important;
   margin: 0;
+  overflow: hidden !important;
 }
 
 .ant-tabs-nav {
